# yargu

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/registries/: fallback-entities.json
demo/: fixtures.json  fixtures_expected.json  generate_fixtures.py
docs/: demo-script-10min.md  go-no-go.md  iteration-checklists.md  plan-track.md
scripts/: benchmark.py  seed_demo.py
src/yargumark/: config.py  db.py  pricing.py  schema.sql
src/yargumark/app/: common.py  main.py
src/yargumark/app/pages/: 1_Document.py  1_News_Library.py  2_Document.py  2_News_Library.py  3_Registry.py  4_Sandbox.py  5_Fixtures.py  5_Registry_Editor.py  5_Update_Registry.py  6_Fixtures.py  6_Update_Registry.py
src/yargumark/benchmark/: fixtures_metrics.py
src/yargumark/crawler/: backfill.py  items.py  pipelines.py  run.py  settings.py  spider.py  title.py  urlnorm.py
src/yargumark/index/: cli.py  reindex.py
src/yargumark/marker/: markup.py  render.py  templates.py
src/yargumark/nlp/: cli.py  confidence_rules.py  context_check.py  extractor.py  llm_cache.py  matcher.py  pipeline.py  prompts.py  slovnet_fallback.py  types.py
src/yargumark/registry/: __main__.py  alias_enricher.py  cli.py  lemmatize.py  models.py  normalize.py  sources.py  sync.py
tests/: test_golden_fixtures.py  test_marker.py  test_matcher.py  test_title.py  test_urlnorm.py
